syntax = "proto3";

import "google/protobuf/timestamp.proto";
option go_package = "users/internal/handlers/grpchandler/users";

message UserIDReqMsg {
    string id = 1;
}

message UserRespMsg {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string pswdHash = 4;
    string email = 5;
    string country = 6;
    google.protobuf.Timestamp createdAt = 7;
    google.protobuf.Timestamp updatedAt = 8;
}

message ListUserReqMsg {
    repeated string country = 1;
    optional int64 pageSize = 2;
    optional int64 pageNumber = 3;
}

message ListUserRespMsg {
    repeated UserRespMsg users = 1;
    int64 totalCount = 2;
    int64 resultCount = 3;
}

service Users {
    rpc GetUserByID(UserIDReqMsg) returns (UserRespMsg) {}
    rpc ListUser(ListUserReqMsg) returns (ListUserRespMsg) {}
}
